# polish-notation

./: .gitignore  Cargo.toml  pyproject.toml
.github/: copilot-instructions.md
src/polish_notation/: __init__.py
src/polish_notation/core/: convert.py  lexer.py  models.py  parser.py
