[package]
name = "polish_notation"
version = "0.1.0"
edition = "2024"

[lib]
# "cdylib" is neccesary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
name = "_core"

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking againts libpython.so)
# "abi3-py313" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.13
pyo3 = { version = "0.28.2", features = ["abi3-py313", "extension-module"] }
