[project]
name = "polish-notation"
version = "1.0.0"
description = "Polish Notation Converter"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Victor Salazar Lopez", email = "salazarlopezvictor@outlook.com" }
]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "questionary>=2.1.1",
  "rich>=14.1.0",
]

[project.scripts]
polish-notation = "polish_notation:main"

[dependency-groups]
dev = [
  "commitizen>=4.9.1",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "ruff>=0.13.3",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "polish_notation._core"
python-packages = ["polish_notation"]
python-source = "src"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" }
]
